voting-app/voting-app-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-deaf-caribou
  namespace: default
  annotations:
    openshift.io/host.generated: 'true'
spec:
 # host: route-deaf-caribou-default.apps-crc.testing
  path: /
  to:
    kind: Service
    name: vote
    weight: 100
  port:
    targetPort: vote-service
  wildcardPolicy: None
